# GBEmulator

./: CMakeLists.txt
.cache/clangd/index/: cpu.c.18C2DB4ED75360D7.idx  cpu.c.69C7AC5064F76A06.idx  cpu.c.9D0F365A11D2F0A6.idx  cpu.h.ADB6F2C8981FB579.idx  cpu.h.E66677741A8DF49D.idx  cpu.h.F5A1112167A434F5.idx  cpu_alu.c.AAAD04838BE4DC5A.idx  cpu_alu.c.B86A8C4B23A479B1.idx  cpu_alu.h.5E6B2CA9BC5EB192.idx  cpu_alu.h.9A6D732189DC3744.idx  cpu_alu_16.c.B76F5BFB1537810C.idx  cpu_alu_16.c.CD3DD0EDDBD3B42A.idx  cpu_alu_16.h.1C30D0EF40FF606D.idx  cpu_alu_16.h.1E9F9BA708190A91.idx  cpu_cb.c.E95243ADE02975E1.idx  cpu_cb.h.BB381842B2C221D6.idx  cpu_control_flow.c.1A7CA5DD54729DC9.idx  cpu_control_flow.c.8813AD53DBD31C28.idx  cpu_control_flow.h.0CA1661AC8EC0398.idx  cpu_control_flow.h.1E7C7A527B4742C9.idx  cpu_flags.h.5ECB617215EBC3CC.idx  cpu_flags.h.7282946297285370.idx  cpu_load.c.0B4EFBCD28999F2B.idx  cpu_load.c.403CB7C3C8ECFD31.idx  cpu_load.h.3527B2E1D342F8E2.idx  cpu_load.h.80000726FCCB4080.idx  cpu_load_16.c.BADDE010AED85A79.idx  cpu_load_16.c.F3F8FF81868B7A52.idx  cpu_load_16.h.576186AD7074498E.idx  cpu_load_16.h.703D9517ED7DA1E0.idx  cpu_misc.c.3EC9CE2BDECBF91B.idx  cpu_misc.c.F4F72BEFFDE015D2.idx  (+31 more)
include/: cpu.h  cpu_register.h  gb.h  graphics.h  memory.h  opcodes.h  ppu.h
include/cpu/: cpu_alu.h  cpu_alu_16.h  cpu_cb.h  cpu_control_flow.h  cpu_flags.h  cpu_load.h  cpu_load_16.h  cpu_misc.h
src/: cpu.c  cpu_register.c  gb.c  graphics.c  main.c  memory.c  ppu.c
src/cpu/: cpu_alu.c  cpu_alu_16.c  cpu_cb.c  cpu_control_flow.c  cpu_load.c  cpu_load_16.c  cpu_misc.c
